--- a/index.html
+++ b/index.html
@@ -1,4 +1,45 @@
 <!DOCTYPE html>
-    <html>
-        <title>1132920_楊宇安</title>
-    </html>
+<html lang="zh-Hant">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>簡單頁面</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+        }
+        section {
+            padding: 20px;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 5px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>歡迎來到我的簡單頁面</h1>
+    </header>
+    <section>
+        <p>這是一些簡單的內容，您可以根據需要進行修改。</p>
+    </section>
+    <footer>
+        <p>&copy; 2025 我的網站</p>
+    </footer>
+</body>
+</html>
